src/objects/CventEvents__NominationNotificationsSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration that allows to set up the behavior of sending notifications.</description>
    <fields>
        <fullName>CventEvents__Day__c</fullName>
        <description>Day of the week on which notifications are sent.</description>
        <inlineHelpText>Day of the week on which notifications are sent.</inlineHelpText>
        <label>Day</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Frequency__c</fullName>
        <description>Frequency of email notifications.</description>
        <inlineHelpText>Frequency of email notifications.</inlineHelpText>
        <label>Frequency</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsChatterNotificationsEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the chatter notifications are enabled.</description>
        <inlineHelpText>Indicates whether the chatter notifications are enabled.</inlineHelpText>
        <label>Is Chatter Notifications Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsEmailNotificationsEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the email notifications are enabled.</description>
        <inlineHelpText>Indicates whether the email notifications are enabled.</inlineHelpText>
        <label>Is Email Notifications Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__Time__c</fullName>
        <description>The hour of the day in GMT at which the notifications are sent.</description>
        <inlineHelpText>The hour of the day in GMT at which the notifications are sent.</inlineHelpText>
        <label>Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Nomination Notifications Settings</label>
</CustomObject>